# DigicoreOS

./: .dockerignore  .gitignore  Cargo.toml  README.md  deny.toml
libs/event-models/: Cargo.toml
libs/event-models/src/: ai.rs  auth.rs  crm.rs  erp.rs  header.rs  hrm.rs  lib.rs  reporting.rs
libs/platform-auth/: Cargo.toml
libs/platform-auth/src/: claims.rs  context.rs  lib.rs  rbac.rs  verify.rs
libs/platform-events/: Cargo.toml
libs/platform-events/src/: consumer.rs  error.rs  lib.rs  ports.rs
libs/platform-observability/: Cargo.toml
libs/platform-observability/src/: http_metrics.rs  lib.rs
libs/platform-outbox/: Cargo.toml
libs/platform-outbox/src/: lib.rs  message.rs  nats.rs  pg.rs  ports.rs  relay.rs
libs/platform-ratelimit/: Cargo.toml
libs/platform-ratelimit/src/: lib.rs
services/ai-svc/: Cargo.toml
services/ai-svc/migrations/: 0001_init.sql  0002_insights.sql  README.md
services/ai-svc/src/: main.rs
services/ai-svc/src/api/: mod.rs
services/ai-svc/src/api/http/: routes.rs
services/ai-svc/src/bootstrap/: config.rs  wiring.rs
services/ai-svc/src/domain/: mod.rs
services/ai-svc/src/domain/assistant/: mod.rs  ports.rs  services.rs
services/ai-svc/src/domain/ingest/: ingestor.rs  mod.rs
services/ai-svc/src/domain/insights/: entities.rs  mod.rs  ports.rs  services.rs
services/ai-svc/src/domain/shared/: events.rs  mod.rs
services/ai-svc/src/infra/: mod.rs
services/ai-svc/src/infra/ai/: claude_assistant.rs  mod.rs  stub_assistant.rs  stub_generator.rs
services/ai-svc/src/infra/db/: insight_repo_pg.rs  mod.rs  postgres.rs
services/ai-svc/src/infra/time/: mod.rs
services/ai-svc/src/utils/: id.rs
services/auth-svc/: AI-FIRST-ARCHITECTURE.md  Cargo.toml
services/auth-svc/migrations/: 0001_init.sql  0002_rbac_contacts_activities_leave.sql  0003_super_admin.sql  0004_login_attempts.sql  README.md
services/auth-svc/src/: main.rs
services/auth-svc/src/api/: mod.rs
services/auth-svc/src/api/http/: mod.rs  routes.rs
services/auth-svc/src/bootstrap/: config.rs  mod.rs  wiring.rs
services/auth-svc/src/domain/: mod.rs
services/auth-svc/src/domain/identity/: entities.rs  mod.rs  outbox.rs  ports.rs  provisioning.rs  rbac.rs  services.rs
services/auth-svc/src/domain/shared/: error.rs  events.rs  mod.rs  types.rs
services/auth-svc/src/infra/: mod.rs
services/auth-svc/src/infra/db/: login_attempt_repo_pg.rs  mod.rs  outbox_repo_pg.rs  postgres.rs  provisioning_repo_pg.rs  refresh_token_repo_pg.rs  role_repo_pg.rs  tenant_repo_pg.rs  user_repo_pg.rs
services/auth-svc/src/infra/messaging/: mod.rs  nats.rs  relay.rs
services/auth-svc/src/infra/security/: jwt.rs  mod.rs  password.rs  refresh_token.rs
services/auth-svc/src/infra/time/: clock.rs
services/auth-svc/src/utils/: id.rs  logging.rs  mod.rs
services/core-erp-svc/: AI-FIRST-ARCHITECTURE.md  Cargo.toml
services/core-erp-svc/migrations/: 0001_init.sql  0002_products.sql  0003_orders.sql  0004_payments.sql  0005_inventory.sql  0006_invoices.sql  README.md
services/core-erp-svc/src/: main.rs
services/core-erp-svc/src/api/http/: mod.rs  routes.rs
services/core-erp-svc/src/bootstrap/: config.rs  wiring.rs
services/core-erp-svc/src/domain/: mod.rs
services/core-erp-svc/src/domain/inventory/: entities.rs  mod.rs  ports.rs  services.rs
services/core-erp-svc/src/domain/invoices/: entities.rs  mod.rs  ports.rs  services.rs
services/core-erp-svc/src/domain/orders/: entities.rs  mod.rs  ports.rs  services.rs
services/core-erp-svc/src/domain/payments/: entities.rs  mod.rs  ports.rs  services.rs
services/core-erp-svc/src/domain/products/: entities.rs  mod.rs  ports.rs  services.rs
services/core-erp-svc/src/domain/shared/: events.rs  types.rs
services/core-erp-svc/src/infra/db/: inventory_repo_pg.rs  invoice_repo_pg.rs  mod.rs  order_repo_pg.rs  payment_repo_pg.rs  postgres.rs  product_repo_pg.rs
services/crm-svc/: Cargo.toml
services/crm-svc/migrations/: 0001_init.sql  0002_customers.sql  0003_deals.sql  0004_contacts.sql  0005_activities.sql  README.md
services/crm-svc/src/: main.rs
services/crm-svc/src/api/http/: routes.rs
services/crm-svc/src/bootstrap/: config.rs  wiring.rs
services/crm-svc/src/domain/: mod.rs
services/crm-svc/src/domain/activities/: entities.rs  mod.rs  ports.rs  services.rs
services/crm-svc/src/domain/contacts/: entities.rs  mod.rs  ports.rs  services.rs
services/crm-svc/src/domain/customers/: entities.rs  mod.rs  ports.rs  services.rs
services/crm-svc/src/domain/deals/: entities.rs  mod.rs  ports.rs  services.rs
services/crm-svc/src/domain/shared/: events.rs  types.rs
services/crm-svc/src/infra/db/: activity_repo_pg.rs  contact_repo_pg.rs  customer_repo_pg.rs  deal_repo_pg.rs  mod.rs  postgres.rs
services/crm-svc/src/utils/: logging.rs
services/reporting-svc/: Cargo.toml
services/reporting-svc/migrations/: 0001_init.sql  0002_sales_summary.sql  0003_snapshots.sql  0004_order_facts.sql  0005_customer_facts.sql  0006_employee_facts.sql  0007_deal_facts.sql  0008_stock_facts.sql  0009_attendance_facts.sql  README.md
services/reporting-svc/src/: e2e.rs  main.rs
services/reporting-svc/src/bootstrap/: config.rs  mod.rs  wiring.rs
services/reporting-svc/src/domain/: mod.rs
services/reporting-svc/src/infra/: mod.rs
verticals/retail-svc/: Cargo.toml  README.md
verticals/retail-svc/migrations/: 0001_init.sql  0002_loyalty.sql  0003_points_ledger.sql  0004_loyalty_rules.sql
verticals/retail-svc/src/: it.rs  main.rs
verticals/retail-svc/src/bootstrap/: config.rs  wiring.rs
verticals/retail-svc/src/domain/: mod.rs
verticals/trade-export-svc/: Cargo.toml  README.md
verticals/trade-export-svc/migrations/: 0001_init.sql  0002_shipments.sql  0003_cargo_lines.sql  0004_status_history.sql
verticals/trade-export-svc/src/: it.rs  main.rs
verticals/trade-export-svc/src/api/: mod.rs
verticals/trade-export-svc/src/bootstrap/: config.rs  mod.rs  wiring.rs
verticals/trade-export-svc/src/domain/: mod.rs
verticals/trade-export-svc/src/infra/: mod.rs
verticals/trade-export-svc/src/utils/: mod.rs
(+284 files in other folders)
