# Shared observability bootstrap (OBSERVABILITY.md): JSON logging via `tracing`,
# Prometheus metrics recorder. OpenTelemetry bridge is added here later so every
# service inherits it without code changes.
[package]
name = "platform-observability"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
tracing-opentelemetry = { workspace = true }
