# ai-svc – AI kernel: insights, scoring, RAG/assist. Subscribes to platform
# events, publishes AiInsightGenerated. Governing docs: ARCHITECTURE.md §3.6,
# EVENTS.md §3.6, DATA-STRATEGY.md.
[package]
name = "ai-svc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
# ai-svc CONSUMES platform events (decode) and PRODUCES AiInsightGenerated.
event-models = { workspace = true }
platform-auth = { workspace = true }
platform-events = { workspace = true }
platform-outbox = { workspace = true }
platform-observability = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
metrics = { workspace = true }
