# auth-svc – multi-tenant authentication, users, tenants, RBAC, JWT.
# Governing docs: SERVICE-auth-svc.md, AUTH-FLOW.md, SECURITY.md, API-GATEWAY.md, EVENTS.md.
[package]
name = "auth-svc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
# internal contracts & observability
event-models = { workspace = true }
platform-auth = { workspace = true }
platform-outbox = { workspace = true }
platform-observability = { workspace = true }

# runtime & web
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# serialization / errors
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }

# ids & time
uuid = { workspace = true }
chrono = { workspace = true }

# data (infra layer ONLY – never imported from domain/). The event bus
# (NATS) is reached through the shared `platform-outbox` crate.
sqlx = { workspace = true }

# security (infra layer ONLY)
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

# observability
tracing = { workspace = true }
metrics = { workspace = true }

[dev-dependencies]
# Generate an ephemeral RSA key pair for RS256 token round-trip tests so the
# suite needs no committed key material (SECURITY.md: never commit secrets).
rsa = { workspace = true }
rand = { workspace = true }
