# crm-svc – CRM: customers, contacts, deals, sales pipeline, activities.
# Governing docs: ARCHITECTURE.md §3.3, API-GATEWAY.md, EVENTS.md §3.3, DATA-STRATEGY.md.
[package]
name = "crm-svc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
event-models = { workspace = true }
platform-auth = { workspace = true }
platform-outbox = { workspace = true }
platform-observability = { workspace = true }
platform-ratelimit = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
metrics = { workspace = true }
