# reporting-svc – analytics: subscribes to platform events, builds fact/snapshot
# read models, serves dashboards/reports. Governing docs: ARCHITECTURE.md §3.5,
# EVENTS.md §3.5, DATA-STRATEGY.md.
[package]
name = "reporting-svc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
platform-auth = { workspace = true }
platform-outbox = { workspace = true }
platform-observability = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
metrics = { workspace = true }
