# reporting-svc – analytics: subscribes to platform events, builds fact/snapshot
# read models, serves dashboards/reports. Governing docs: ARCHITECTURE.md §3.5,
# EVENTS.md §3.5, DATA-STRATEGY.md.
[package]
name = "reporting-svc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
# internal contracts: reporting CONSUMES other services' events, so it depends
# on event-models to decode the published payloads.
event-models = { workspace = true }
platform-auth = { workspace = true }
platform-events = { workspace = true }
platform-outbox = { workspace = true }
platform-observability = { workspace = true }
platform-ratelimit = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
# event bus subscription is handled by the shared platform-events crate.
tracing = { workspace = true }
metrics = { workspace = true }
