# retail-svc — second vertical (sector module), OUTSIDE the core workspace
# (verticals/README.md). A retail loyalty module: it consumes the core ONLY via
# business events (NATS) and the shared platform-* libraries — never the core
# service crates or schemas.
#
# Standalone workspace (like verticals/trade-export-svc): shared libs are path
# deps; versions mirror the core workspace. Build/CI use `--manifest-path`.
[workspace]

[package]
name = "retail-svc"
version = "0.1.0"
edition = "2021"
rust-version = "1.96"
publish = false

[dependencies]
event-models = { path = "../../libs/event-models" }
platform-auth = { path = "../../libs/platform-auth" }
platform-events = { path = "../../libs/platform-events" }
platform-outbox = { path = "../../libs/platform-outbox" }
platform-observability = { path = "../../libs/platform-observability" }

tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "migrate",
] }
async-nats = "0.49"
futures = "0.3"
tracing = "0.1"
metrics = "0.24"
